# research-intelligence-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
deployment/ecs/: README.md  service-connect-example.json  task-definition.json
deployment/observability/: prometheus.yml
deployment/observability/grafana/dashboards/: research-intelligence-mcp.json
deployment/observability/grafana/provisioning/dashboards/: dashboards.yml
deployment/scripts/: smoke_test.py  wait_for_ready.py
docs/: PROJECT_DOCUMENTATION.md  mcp_payload_examples.md  remote_mcp_deployment_prd.md  research_intelligence_mcp_authentication.md  research_intelligence_mcp_authentication_testing.md  research_intelligence_mcp_client_setup.md  research_intelligence_mcp_deployment.md  research_intelligence_mcp_deployment_guide.md  research_intelligence_mcp_prd.md  research_intelligence_mcp_roadmap.md
docs/prd/: research_intelligence_mcp_prd.md
docs/roadmap/: research_intelligence_mcp_roadmap.md
scripts/: generate_dev_token.py
src/research_intelligence_mcp/: __init__.py  __main__.py  main.py
src/research_intelligence_mcp/config/: settings.py
src/research_intelligence_mcp/domain/: __init__.py  base.py  enums.py  identifiers.py  models.py  requests.py
src/research_intelligence_mcp/infrastructure/: __init__.py  http.py  lifecycle.py  logging.py  rate_limit.py
src/research_intelligence_mcp/infrastructure/auth/: __init__.py  jwt_verifier.py
src/research_intelligence_mcp/infrastructure/cache/: __init__.py  base.py  keys.py  ttl.py
src/research_intelligence_mcp/infrastructure/observability/: http_middleware.py  metrics.py
src/research_intelligence_mcp/mcp/: __init__.py  dependencies.py  observability.py  server.py  transport.py
src/research_intelligence_mcp/mcp/schemas/: __init__.py  paper.py  search.py
src/research_intelligence_mcp/mcp/tools/: __init__.py  health.py  metrics.py  paper.py  search.py
src/research_intelligence_mcp/providers/: __init__.py  base.py  cached.py  errors.py
src/research_intelligence_mcp/providers/arxiv/: __init__.py  client.py  create.py  mapper.py  models.py  parser.py  provider.py
src/research_intelligence_mcp/providers/semantic_scholar/: __init__.py  client.py  create.py  mapper.py  models.py  provider.py
src/research_intelligence_mcp/services/search/: aggregator.py  deduplicator.py  executor.py  provider_registry.py  ranker.py  service.py
tests/unit/: test_dependencies.py  test_health.py  test_settings.py
tests/unit/domain/: test_identifiers.py  test_models.py  test_requests.py  test_serialization.py
tests/unit/infrastructure/: test_http.py  test_lifecycle.py  test_rate_limit.py
tests/unit/infrastructure/auth/: test_jwt_verifier.py
tests/unit/infrastructure/cache/: test_keys.py  test_ttl.py
tests/unit/infrastructure/observability/: test_http_middleware.py  test_metrics.py
tests/unit/mcp/: test_dependencies.py  test_metrics_route.py  test_observability.py  test_paper_schemas.py  test_paper_tools.py  test_search_schemas.py  test_search_tools.py  test_server.py  test_transport.py
tests/unit/providers/: test_cached_provider.py
tests/unit/providers/arxiv/: test_client.py  test_create.py  test_mapper.py  test_models.py  test_parser.py  test_provider.py
tests/unit/providers/semantic_scholar/: test_client.py  test_mapper.py
tests/unit/services/search/: __init__.py  helpers.py  test_aggregator.py  test_deduplicator.py  test_executor.py  test_provider_registry.py  test_ranker.py  test_service.py
(+6 files in other folders)
