[project]
name = "research-intelligence-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "supuni9622", email = "supunimanamperi@gmail.com" }
]
requires-python = ">=3.12"
keywords = [
    "mcp",
    "model-context-protocol",
    "academic-research",
    "semantic-scholar",
    "arxiv",
    "ai-agents",
    "research-intelligence",
]
dependencies = [
    "anyio>=4,<5",
    "cachetools>=5,<7",
    "defusedxml>=0.7,<1",
    "httpx>=0.27,<1",
    "mcp>=1.27,<2",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "structlog>=24,<26",
    "tenacity>=8.3,<10",
]

[project.scripts]
research-intelligence-mcp = "research_intelligence_mcp.main:main"

[dependency-groups]
dev = [
    "mypy>=1.11,<2",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "respx>=0.21,<1",
    "ruff>=0.6,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_intelligence_mcp"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "ASYNC",
    "B",
    "E",
    "F",
    "I",
    "RUF",
    "UP",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["research_intelligence_mcp"]
warn_unused_configs = true
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]

